20k_1thread_12sec_161mb 100k_1thread_11min_78mb?? (recursion by columns)